Names align were fixed

--- a/src/components/PhoneCatalog/PhoneCatalog.css
+++ b/src/components/PhoneCatalog/PhoneCatalog.css
@@ -44,6 +44,7 @@
   justify-content: center;
   align-items: center;
   color: #000;
+  text-align: center;
 }
 
 .phone__btn {
